kubernetes/zitadel/base/service.yaml
---
# Source: zitadel/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-6.2.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v2.43.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http2-server
      protocol: TCP
      name: http2-server
      appProtocol: http2
  selector:
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
