kubernetes/zitadel/base/route.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    app.kubernetes.io/instance: zitadel
  annotations:
    externaldns.k8s.io: pihole
    route.openshift.io/termination: passthrough # reencrypt
    route.openshift.io/destination-ca-certificate-secret: ca-bundle
spec:
  ingressClassName: openshift-default
  rules:
    - host: zitadel.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: zitadel
                port:
                  name: http2-server
  tls:
    - hosts:
        - zitadel.arthurvardevanyan.com
      secretName: zitadel-cert
