kubernetes/zitadel/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openshift-monitoring
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              name: openshift-user-workload-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app: prometheus-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app: prometheus-truenas
      ports:
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.7/32
    - to:
        - ipBlock:
            cidr: 10.101.10.7/32
        - ipBlock:
            cidr: 10.101.10.5/32 # OKD WildCard
        - ipBlock:
            cidr: 10.101.10.7/32 # OKD APP WildCard
        - ipBlock:
            cidr: 18.204.123.63/32 # mailserver.purelymail.com.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443 # Passthrough/ReEncrypt Termination
        - protocol: TCP
          port: 80 # Edge Termination
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-ingress
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: https-gateway
